[Fix] centralize width and height for better align

--- a/epitweet-frontend/src/app/pages/landing-page/landing-page.component.scss
+++ b/epitweet-frontend/src/app/pages/landing-page/landing-page.component.scss
@@ -1,10 +1,10 @@
 .content-wrapper {
-    width: 100%;
-    max-width: 3200px;
+    width: 90%;
+    height: 90%;
     padding: 2rem;
     display: flex;
     flex-direction: column;
-    min-height: 100%;
+    margin: auto;
 }
 
 .header {
