--- a/epitweet-frontend/src/styles.scss
+++ b/epitweet-frontend/src/styles.scss
@@ -1,9 +1,20 @@
 @import '@angular/material/prebuilt-themes/azure-blue.css';
 
 /* Global Styles */
-body {
+html {
   width: 100vw !important;
   height: 100vh !important;
+  min-width: 650px !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+  background-color: #f7f9f9;
+  color: #0f1419;
+}
+
+body {
+  width: 100% !important;
+  height: 100% !important;
   margin: 0 !important;
   padding: 0 !important;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
@@ -12,11 +23,9 @@ body {
 }
 
 .container {
-  position: relative;
-  width: 90%;
-  height: 90%;
+  width: 100%;
+  height: 100%;
   margin: auto;
-  justify-content: center;
   background: #f7f9f9;
 }
 
